Changed to PostgresSql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,26 @@
-# H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-# Datasource
-spring.datasource.url=jdbc:h2:file:~/spring-boot-h2-db
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=update
+## H2
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
+## Datasource
+#spring.datasource.url=jdbc:h2:file:~/spring-boot-h2-db
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.jpa.hibernate.ddl-auto=update
+#debug=true
+## default connection pool
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/HomeApp
+spring.datasource.username=teo
+spring.datasource.password=a12a12a12
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+#security.basic.enabled=false
+management.security.enabled=false
+
 debug=true
