--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,7 @@ spring.jpa.hibernate.ddl-auto = update
 management.security.enabled=false
 
 debug=true
+
+
+management.endpoints.web.cors.allowed-origins=https://sleepy-inlet-37715.herokuapp.com
+management.endpoints.web.cors.allowed-methods=GET, POST,PUT,DELETE
