--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@
 #spring.datasource.driver-class-name=org.h2.Driver
 #spring.jpa.hibernate.ddl-auto=update
 #debug=true
-## default connection pool
+# default connection pool
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.maxActive=10
 spring.datasource.maxIdle=5
