Changed hibernate ddl

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ spring.datasource.password=b7147d233a2a060ca61c86bbeed1e0962a778f3b53c75936e801c
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 #security.basic.enabled=false
 #management.security.enabled=false
 
