--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,10 +28,10 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 #security.basic.enabled=false
-#management.security.enabled=false
+management.security.enabled=false
 
 #debug=true
 
 
 management.endpoints.web.cors.allowed-origins=https://sleepy-inlet-37715.herokuapp.com
-management.endpoints.web.cors.allowed-methods=GET, POST,PUT,DELETE
+management.endpoints.web.cors.allowed-methods=GET,POST,PUT,DELETE
