--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ spring.jpa.hibernate.ddl-auto = update
 #security.basic.enabled=false
 management.security.enabled=false
 
-#debug=true
+debug=true
 
 
 management.endpoints.web.cors.allowed-origins=https://sleepy-inlet-37715.herokuapp.com
