--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,10 +28,17 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 #security.basic.enabled=false
-management.security.enabled=false
+#management.security.enabled=false
 
-debug=true
+#debug=true
 
 
 management.endpoints.web.cors.allowed-origins=https://sleepy-inlet-37715.herokuapp.com
 management.endpoints.web.cors.allowed-methods=GET,POST,PUT,DELETE
+jwt.signing.key.secret=mySecret
+jwt.get.token.uri=/authenticate
+jwt.refresh.token.uri=/refresh
+jwt.http.request.header=Authorization
+jwt.token.expiration.in.seconds=604800
+
+spring.jpa.show-sql=true
